--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <span id = "hours"></span>
       <span id = "minutes">:</span>
       <span id = "seconds">:</span>
+      <span id = "millisecods></span>
     </div>
   </div>
     <div class = "login" id = "login">
