--- a/rand2.html
+++ b/rand2.html
@@ -39,10 +39,9 @@
 
   <body>
       <h1>Number guessing game</h1>
-
-    <p id = "name">Enter Numbers Between 1 and 100</p>
 <div class="form">
-  <label for="guessField">Enter a guess: </label><input type="text" id="guessField" class="guessField">
+   <p id = "name">Enter Numbers Between 1 and 100</p>
+  <input type="text" id="guessField" class="guessField"><br>
   <button type = "button" onclick = "checkGuess()" class = "guessSubmit">check Guess</button>
 </div>
 
