--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </div>
   <div>
     <ul>
-      <li class = "active"><a href = "rand2.html">Number Guessing Game</a></li>
+      <li id = "active"><a href = "rand2.html">Number Guessing Game</a></li>
       <li><a href = "https://www.facebook.com" target = "_self">Face book!</a></li>
       <li><a href = "https://www.twitter.com">Twitter</a></li>
       <li><a href = "https://www.Amazon.com">Amazon</a></li>
