--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button type = "button" id = "primary" onclick = "myfunction2()"> signup</button>
     </div>
   <div class = "topnav">
-    <a href = "#">Game</a>
+    <a href = "rand2.html">Game</a>
     <a href = "#">Digital Clock</a>
     <a href = "#">Facebook</a>
     <a href = "#">Youtube</a>
