--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class = "topnav">
     <a href = "rand2.html">Game</a>
     <a href = "#">Digital Clock</a>
-    <a href = "https://www.facebook.com/">Facebook</a>
+    <a href = "https://www.facebook.com">Facebook</a>
     <a href = "#">Youtube</a>
     <a href = "#">Amazon</a>
     <div style = "background-color:black;" id = "clock">
