--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
    <div class = "background" id = "id01">
         <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-        <img src = "joe biden.jpg" alt = "user" id = "logimage">
+        <img src = "joe biden.jpg" alt = "user_img.jpg" id = "logimage">
         <h4 style = "color : grey; margin : 0;">Get Started</h4>
         <input type = "text" placeholder="username"  >
         <input type = "password" placeholder="passward"><br><br>
