--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class = "hed">
-      <img src = "logo.jp" alt = "logo" id = "logo" />
+      <img src = "logo.jpg" alt = "logo" id = "logo" />
       <h1 style ="color:white;">simple website</h1>
       <button type = "button" id = "primary" onclick = "myfunction()">login </button>
       <button type = "button" id = "primary" onclick = "myfunction2()"> signup</button>
