--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div>
   <div class = "background" id = "id2">
        <span onclick="document.getElementById('id2').style.display='none'" class="close" title="Close Modal">&times;</span>
-       <img src = "user_img.jpg" alt = "user" id = "logimage">
+       <img src = "user_img.jpg" alt = "user" >
        <h4 style = "color : grey; margin : 0;">Enter Details</h4>
        <h6>Choose Username</h6>
        <input type = "text" placeholder="username">
